# GrassProject

./: .gitignore  CMakeLists.txt  imgui.ini  readme.md
assets/shaders/: billboard.frag  blades.frag  blades.vert  checker_pattern.comp  compute.comp  compute.frag  light.frag  light.vert  patch.frag  patch.vert  perlin_noise.comp  skybox.frag
assets/textures/misc/: perlin_noise_1.tga  perlin_noise_2.tga
common/submodules/assimp-5.0.0/: CMakeLists.txt
common/submodules/glad/: CMakeLists.txt
common/submodules/glad/include/glad/: glad.h
common/submodules/glad/src/: glad.c
common/submodules/glfw/include/GLFW/: glfw3.h
common/submodules/glfw/src/: win32_window.c
common/submodules/imgui/: CMakeLists.txt
common/submodules/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
common/submodules/include/glad/: glad.h
common/submodules/src/: glad.c
grass_project/: CMakeLists.txt  blades.frag  blades.vert  camera.cpp  camera.h  debug.h  fluid_grid.cpp  fluid_grid.h  grass_math.cpp  grass_math.h  gui_helpers.h  imported_image.cpp  imported_image.h  input.cpp  input.h  logger.cpp  logger.h  main.cpp  patch.cpp  patch.h  perlin_noise.cpp  perlin_noise.h  primitives.h  scene.cpp  scene.h  scene_object.cpp  scene_object.h  scene_object_arrays.cpp  scene_object_arrays.h  scene_object_indexed.cpp  scene_object_indexed.h  scene_object_instanced.cpp  scene_object_instanced.h  shader.cpp  shader.frag  shader.h  shader.vert  shader_program.cpp  shader_program.h  skybox.vert  (+3 more)
grass_project/grass_simulation/: fluid_grid.cpp  fluid_grid.h  grass_math.cpp  grass_simulation.cpp  grass_simulation.h  patch.cpp  patch.h  perlin_noise.h
grass_project/rendering/: glmutils.h  scene_object.cpp  scene_object.h  scene_object_instanced.cpp  scene_object_instanced.h  shader.cpp  shader_program.cpp  texture.cpp
grass_project_top/: CMakeLists.txt
grass_project_top/grass_project/: CMakeLists.txt  billboard.vert  camera.cpp  glmutils.cpp  glmutils.h  main.cpp  scene_object.cpp  scene_object.h  shader.cpp  shader.h  texture.h
